Second go at nbsite (WIP).

--- a/_modules/datashader/transfer_functions.html
+++ b/_modules/datashader/transfer_functions.html
@@ -5,9 +5,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8"/>
   <title>
-   datashader.transfer_functions — datashader
+   datashader.transfer_functions — datashader 0.6.2 documentation
   </title>
-  <meta content="Stop plotting your data - annotate your data and let it visualize itself." name="description"/>
+  <meta content="Turns even the largest data into images, accurately." name="description"/>
   <meta content="datashader contributors" name="author"/>
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -41,7 +41,7 @@
   </script>
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="../../_static/images/favicon.ico" rel="icon" type="image/png"/>
+  <link href="../../_static/favicon.ico" rel="icon" type="image/png"/>
   <!-- Canonical
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="/_modules/datashader/transfer_functions.html" rel="canonical"/>
@@ -49,10 +49,10 @@
  <body class="">
   <header class="navigation">
    <div class="wrapper">
-    <a class="logo" href="/">
-     <img alt="Logo" src="../../_static/images/logo.png"/>
+    <a class="logo" href="../../index.html">
+     <img alt="Logo" src="../../_static/datashader-logo.png"/>
     </a>
-    <a class="navigation-menu logo-text" href="/">
+    <a class="navigation-menu logo-text" href="../../index.html">
      datashader
     </a>
     <a class="navigation-menu-button" href="javascript:void(0)" id="js-mobile-menu">
@@ -706,12 +706,12 @@
       </span>
      </li>
      <li>
-      <a href="//twitter.com/datashader/.html">
+      <a href="//twitter.com/datashader/">
        Twitter
       </a>
      </li>
      <li>
-      <a href="//github.com/bokeh/datashader/.html">
+      <a href="//github.com/bokeh/datashader/">
        Github
       </a>
      </li>
