--- a/topics/lidar.html
+++ b/topics/lidar.html
@@ -5,9 +5,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8"/>
   <title>
-   lidar — datashader
+   lidar — datashader 0.6.2 documentation
   </title>
-  <meta content="Stop plotting your data - annotate your data and let it visualize itself." name="description"/>
+  <meta content="Turns even the largest data into images, accurately." name="description"/>
   <meta content="datashader contributors" name="author"/>
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -41,7 +41,7 @@
   </script>
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="../_static/images/favicon.ico" rel="icon" type="image/png"/>
+  <link href="../_static/favicon.ico" rel="icon" type="image/png"/>
   <!-- Canonical
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="/topics/lidar.html" rel="canonical"/>
@@ -49,10 +49,10 @@
  <body class="">
   <header class="navigation">
    <div class="wrapper">
-    <a class="logo" href="/">
-     <img alt="Logo" src="../_static/images/logo.png"/>
+    <a class="logo" href="../index.html">
+     <img alt="Logo" src="../_static/datashader-logo.png"/>
     </a>
-    <a class="navigation-menu logo-text" href="/">
+    <a class="navigation-menu logo-text" href="../index.html">
      datashader
     </a>
     <a class="navigation-menu-button" href="javascript:void(0)" id="js-mobile-menu">
@@ -685,11 +685,11 @@ right, top = map(float, (maxx.meterswest, maxx.metersnorth))</code></pre>
         <div class="output_area">
          <div class="prompt">
          </div>
-         <div id="c2dce967-5aae-4803-b126-36e92b06903f">
+         <div id="c2ce20a2-a08f-425f-ab94-0f577f5641e0">
          </div>
          <div class="output_subarea output_javascript ">
           <script type="text/javascript">
-           var element = $('#c2dce967-5aae-4803-b126-36e92b06903f');
+           var element = $('#c2ce20a2-a08f-425f-ab94-0f577f5641e0');
 
 (function(root) {
   function now() {
@@ -2074,12 +2074,12 @@ roTBs2RqAAAAAElFTkSuQmCC" style="height:25px; border-radius:12px; display: inlin
       </span>
      </li>
      <li>
-      <a href="//twitter.com/datashader/.html">
+      <a href="//twitter.com/datashader/">
        Twitter
       </a>
      </li>
      <li>
-      <a href="//github.com/bokeh/datashader/.html">
+      <a href="//github.com/bokeh/datashader/">
        Github
       </a>
      </li>
